--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: clandnstine
 Type: Package
-Title: clandnstine title goes here otherwise CRAN checks fail
+Title: Perform 'DNS' over 'TLS' Queries
 Version: 0.1.0
 Date: 2019-01-18
 Authors@R: c(
@@ -8,7 +8,9 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-5670-2640"))
   )
 Maintainer: Bob Rudis <bob@rud.is>
-Description: A good description goes here otherwise CRAN checks fail.
+Description: Something something 'DNS. Something something 'TLS'. 
+    Something something 'getdns API/library'.
+SystemRequirements: C++11
 URL: https://gitlab.com/hrbrmstr/clandnstine
 BugReports: https://gitlab.com/hrbrmstr/clandnstine/issues
 Encoding: UTF-8
@@ -20,6 +22,9 @@ Depends:
     R (>= 3.2.0)
 Imports:
     httr,
-    jsonlite
+    jsonlite,
+    Rcpp
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
+LinkingTo: 
+    Rcpp
