context xptr working

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Depends:
 Imports:
     httr,
     jsonlite,
-    Rcpp
+    Rcpp,
+    magrittr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
 LinkingTo: 
