commit before check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@
 S3method(print,gctx)
 export("%>%")
 export(gdns_get_address)
+export(gdns_lib_version)
+export(gdns_query)
 export(gdns_resolver)
-export(get_address)
-import(httr)
 importFrom(Rcpp,sourceCpp)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
