--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: R
 sudo: false
 cache: packages
+dist: xenial
 
-before_install:
-  - sudo apt-get install -y libgetdns-devel libidn2-devel libunbound-devel
+apt_packages:
+  - libgetdns-dev
+  - libidn2-dev
+  - libunbound-dev
 
 addons:
   apt:
