additional getters/setters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,15 @@
 S3method(print,gctx)
 S3method(print,gdns_response)
 export("%>%")
+export(gdns_context)
 export(gdns_get_address)
+export(gdns_get_timeout)
 export(gdns_lib_version)
 export(gdns_query)
-export(gdns_resolver)
+export(gdns_set_hosts)
+export(gdns_set_round_robin_upstreams)
+export(gdns_set_timeout)
+export(gdns_update_resolvers)
 importFrom(Rcpp,sourceCpp)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
