--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,22 @@ S3method(print,gdns_response)
 export("%>%")
 export(gdns_context)
 export(gdns_get_address)
+export(gdns_get_hosts)
+export(gdns_get_resolution_type)
+export(gdns_get_resolvconf)
 export(gdns_get_timeout)
+export(gdns_get_tls_ca_file)
+export(gdns_get_tls_ca_path)
+export(gdns_get_transports)
 export(gdns_lib_version)
 export(gdns_query)
 export(gdns_set_hosts)
+export(gdns_set_resolution_type)
 export(gdns_set_round_robin_upstreams)
 export(gdns_set_timeout)
+export(gdns_set_tls_ca_file)
+export(gdns_set_tls_ca_path)
+export(gdns_set_transports)
 export(gdns_update_resolvers)
 importFrom(Rcpp,sourceCpp)
 importFrom(jsonlite,fromJSON)
