--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,10 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-5670-2640"))
   )
 Maintainer: Bob Rudis <bob@rud.is>
-Description: Something something 'DNS. Something something 'TLS'. 
-    Something something 'getdns API/library'.
+Description: Methods are provided to query 'Domain Name System' ('DNS') stub 
+    and recursive resolvers for all 'DNS' resource record types using 'UDP', 
+    'TCP', and/or 'TLS' transport layers. 'DNS' query support is provided
+    by the 'getdns' (<getdnsapi.net>) C library.
 SystemRequirements: C++11; libgetdns v1.5.1 or higher
 URL: https://gitlab.com/hrbrmstr/clandnstine
 BugReports: https://gitlab.com/hrbrmstr/clandnstine/issues
