--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(gdns_get_address)
 export(gdns_get_hosts)
 export(gdns_get_resolution_type)
 export(gdns_get_resolvconf)
+export(gdns_get_root_servers)
 export(gdns_get_timeout)
 export(gdns_get_tls_ca_file)
 export(gdns_get_tls_ca_path)
