more rrs hnadled in printing; query context can be null

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Depends:
 Imports:
     jsonlite,
     Rcpp,
-    magrittr
+    magrittr,
+    glue
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
 LinkingTo: 
