--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,9 @@ export(gdns_set_tls_ca_file)
 export(gdns_set_tls_ca_path)
 export(gdns_set_transports)
 export(gdns_update_resolvers)
+export(is_gctx)
 importFrom(Rcpp,sourceCpp)
+importFrom(glue,glue_data)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
 useDynLib(clandnstine, .registration = TRUE)
