--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method(print,gctx)
 S3method(print,gdns_response)
 export("%>%")
+export(doh_post)
+export(doh_servers)
 export(gdns_context)
 export(gdns_get_address)
 export(gdns_get_hosts)
@@ -24,6 +26,8 @@ export(gdns_set_tls_ca_path)
 export(gdns_set_transports)
 export(gdns_update_resolvers)
 export(is_gctx)
+import(R6)
+import(httr)
 importFrom(Rcpp,sourceCpp)
 importFrom(glue,glue_data)
 importFrom(jsonlite,fromJSON)
