--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(print,gctx)
 S3method(print,gdns_response)
+S3method(tidy,gdns_doh_response)
 export("%>%")
 export(doh_post)
 export(doh_servers)
@@ -26,6 +27,8 @@ export(gdns_set_tls_ca_path)
 export(gdns_set_transports)
 export(gdns_update_resolvers)
 export(is_gctx)
+export(tidy)
+export(to_inaddr_arpa)
 import(R6)
 import(httr)
 importFrom(Rcpp,sourceCpp)
