--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(tidy,gdns_doh_response)
 export("%>%")
 export(doh_post)
 export(doh_servers)
+export(from_wireformat)
 export(gdns_context)
 export(gdns_get_address)
 export(gdns_get_hosts)
